Table Fix
This commit fixes the table issue seen in the Cyberstorm version of the site that causes tables to make the entire markdown render shift on horizontal scroll

--- a/apps/cyberstorm-remix/app/styles/markdown.css
+++ b/apps/cyberstorm-remix/app/styles/markdown.css
@@ -1,6 +1,5 @@
 @layer nimbus-utils {
   .markdown-wrapper {
-    display: flex;
     max-width: 100%;
     overflow-x: scroll;
     scrollbar-width: none;
@@ -12,7 +11,6 @@
     font: var(--font-body);
     font-weight: var(--font-weight-regular);
     line-height: 160%;
-    word-break: break-word;
 
     a {
       color: var(--color-text-a--default);
